--- a/css/singlePageTemplate.css
+++ b/css/singlePageTemplate.css
@@ -35,7 +35,7 @@ header {
 .logo {
 	color: #fff;
 	font-weight: bold;
-	text-align: undefined;
+	text-align: center;
 	width: 10%;
 	float: left;
 	margin-top: 15px;
