--- a/css/singlePageTemplate.css
+++ b/css/singlePageTemplate.css
@@ -16,6 +16,8 @@ text-decoration-color: aqua;}
 text-decoration-color: aqua;}
 .output3{text-align: center;
 text-decoration-color: aqua;}
+.outputMio{text-align: center;
+	text-decoration-color: aqua;}
 
 /* Container */
 .container {
