--- a/css/singlePageTemplate.css
+++ b/css/singlePageTemplate.css
@@ -11,12 +11,17 @@ body {
 	font-weight: 200;
 }
 .output{text-align: center;
+font-size: 20px;
 text-decoration-color: aqua;}
 .output2{text-align: center;
+	font-size: 20px;
 text-decoration-color: aqua;}
 .output3{text-align: center;
+	font-size: 20px;
 text-decoration-color: aqua;}
-.outputMio{text-align: center;
+.outputMio{
+	text-align: center;
+	font-size: 20px;
 	text-decoration-color: aqua;}
 
 /* Container */
@@ -91,6 +96,7 @@ ul li:hover a {
 	color: #717070;
 }
 .tagline {
+	
 	text-align: center;
 	color: #FFFFFF;
 	margin-top: 4px;
