--- a/css/singlePageTemplate.css
+++ b/css/singlePageTemplate.css
@@ -12,7 +12,8 @@ body {
 }
 .output{text-align: center;
 font-size: 20px;
-text-decoration-color: aqua;}
+text-decoration-color: aqua;
+}
 .output2{text-align: center;
 	font-size: 20px;
 text-decoration-color: aqua;}
@@ -37,17 +38,12 @@ header {
 	width: 100%;
 	height: 5%;
 	background-color: #52bad5;
-	border-bottom: 1px solid #2C9AB7;
+	border-bottom: 10px solid #2C9AB7;
 }
 .logo {
 	color: #fff;
 	font-weight: bold;
 	text-align: center;
-	width: 10%;
-	float: left;
-	margin-top: 15px;
-	margin-left: 25px;
-	letter-spacing: 4px;
 }
 nav {
 	float: right;
@@ -79,11 +75,14 @@ ul li:hover a {
 .hero_header {
 	color: #FFFFFF;
 	text-align: center;
-	margin-top: 0px;
+	margin-top: 20px;
 	margin-right: 0px;
 	margin-bottom: 0px;
 	margin-left: 0px;
 	letter-spacing: 4px;
+	border-top: #52bad5;
+	border-top-width: 10px;
+border: #2C9AB7;
 }
 /* Hero Section */
 .hero {
@@ -92,12 +91,15 @@ ul li:hover a {
 	padding-bottom: 20px;
 }
 .light {
+	
+	
 	font-weight: bold;
 	color: #717070;
 }
 .tagline {
 	
 	text-align: center;
+	
 	color: #FFFFFF;
 	margin-top: 4px;
 	font-weight: lighter;
