--- a/css/singlePageTemplate.css
+++ b/css/singlePageTemplate.css
@@ -37,6 +37,7 @@ text-decoration-color: aqua;}
 header {
 	width: 100%;
 	height: 5%;
+	text-align: center;
 	background-color: #52bad5;
 	border-bottom: 10px solid #2C9AB7;
 }
