--- a/css/singlePageTemplate.css
+++ b/css/singlePageTemplate.css
@@ -24,6 +24,10 @@ text-decoration-color: aqua;}
 	text-align: center;
 	font-size: 20px;
 	text-decoration-color: aqua;}
+	.outputTransfersList{
+		text-align: center;
+		font-size: 20px;
+		text-decoration-color: aqua;}
 
 /* Container */
 .container {
