--- a/saveuplift/AboutPageAssets/styles/aboutPageStyle.css
+++ b/saveuplift/AboutPageAssets/styles/aboutPageStyle.css
@@ -29,23 +29,24 @@ header .logoPlaceholder span {
 }
 header .profilePhoto {
 	
-	width: 259px;
-	border-radius: 50%;
-	height: 259px;
+	width: 268px;
+	height: 50px;
 	clear: both;
 }
 header .profileHeader h1 {
-	font-family: 'Montserrat', sans-serif;
-	color: rgba(146,146,146,1.00);
-	font-size: 30px;
+	font-family:'Mulish', sans-serif;
+	color: #210051;
+	font-size: 50px;
+	text-align: center;
 	font-weight: 700;
 	line-height: 24px;
 }
 header .profileHeader h3 {
 	font-family: sans-serif;
-	color: rgba(146,146,146,1.00);
+	color: #ff41c6;
 	font-size: 16px;
 	font-weight: 700;
+	text-align: center;
 	line-height: 24px;
 }
 hr {
@@ -54,8 +55,8 @@ hr {
 }
 header .profileHeader p {
 	font-family: sans-serif;
-	color: rgba(146,146,146,1.00);
-	font-size: 14px;
+	color: #210051;
+	font-size: 18px;
 	font-weight: 400;
 	line-height: 1.8;
 	overflow-y: auto;
@@ -80,7 +81,7 @@ header .socialNetworkNavBar .socialNetworkNav img:hover {
 .section1 .sectionTitle, .section2 .sectionTitle {
 	font-family: 'Montserrat', sans-serif;
 	color: rgba(146,146,146,1.00);
-	font-size: 18px;
+	font-size: 20px;
 	font-weight: 700;
 	text-transform: uppercase;
 }
@@ -96,7 +97,7 @@ header .socialNetworkNavBar .socialNetworkNav img:hover {
 }
 .mainContent .section1 .section1Content {
 	font-family: ProximaNova;
-	font-size: 14px;
+	font-size: 24px;
 	font-weight: 100;
 	color: rgba(208,207,207,1.00);
 }
@@ -119,7 +120,7 @@ header .socialNetworkNavBar .socialNetworkNav img:hover {
 .section2 .sectionContent {
 	font-family: sans-serif;
 	color: rgba(146,146,146,1.00);
-	font-size: 14px;
+	font-size: 24px;
 	font-weight: 400;
 	line-height: 1.8;
 }
@@ -361,10 +362,10 @@ header .socialNetworkNavBar .socialNetworkNav {
 .mainContent .section1 .section1Content {
 	display: block;
 	margin-top: 0%;
-	margin-right: 0%;
-	margin-left: 26%;
+	margin-right: 10%;
+	margin-left: 10%;
 	margin-bottom: 0%;
-	font-family: sans-serif;
+	font-family: 'Mulish', sans-serif;
 }
 .mainContent .section2 {
 	clear: both;
